# Hybrid-MobileNet-CNN-Based-Chessboard-State-Tracking-Pipeline

./: .gitignore  NEXT_STEPS.md  README.md  debug_board_detection.py  debug_cell_extraction.py  diagnose_empty_cells.py  pyproject.toml  quick_dataset.py  readME.md  requirements.txt  run_data_extractor.py  run_debug_warp.py  run_pipeline.py  simple_video_to_pgn.py
configs/: parameters.yaml
models/: cell_cnn_quick.h5  classes.json  classes_finetuned.json  classes_quick.json  training_history.json
notebooks/: 01_board_detect.ipynb  02_build_cell_dataset.ipynb  03_train_cell_cnn.ipynb  04_infer_video_to_pgn.ipynb
output/: predictions.csv  submission.csv
scripts/: augment_empty_cells.py  bootstrap_from_videos.py  fix_board_detection.py  fix_dataset_balance.py  lightweight_training.py  make_splits.py  retrain_model.py  test_inference.py  verify_board_warp.py
src/Chess_Detection_Competition/: Fen.md  __init__.py  board.py  cells.py  detect_inner_board.py  grid_detector.py  improved_board.py  inference.py  model.py  pgn.py  utils.py
submissions/: submission.csv
